[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.10"
bit_field = "0.10.1"
bitflags = "1.3.2"
xmas-elf = "0.8.0"
log = "0.4.14"
buddy_system_allocator = "0.11.0"
easy-fs = { path = "../easy-fs" }
pci = { path = "../pci" }
isomorphic_drivers = { path = "../isomorphic_drivers" }
vbe = { path = "../vbe" }
stack_trace = { path = "../stack_trace" }
loongarch64 = { version = "*", package = "loongArch64" }
[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"] #禁止链接标准库


[features]
default = ["board_qemu"]
board_qemu = []
gui = []
