[package]
name = "loongrCore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
bit_field = "0.10.1"
rlibc = "1.0.0"
bitflags = "1.3.2"
xmas-elf = "0.8.0"
log = "0.4.14"

buddy_system_allocator = "0.6.0"
easy-fs = {path = "../easy-fs"}
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"] #禁止链接标准库


[features]
board_qemu = []