[package]
name = "loongrCore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
log = "0.4.0"
rlibc = "1.0.0"
bit_field = "0.10.1"
loongArch64 = {path = "../../loongArch64"}


[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"] #禁止链接标准库

[features]
default =[]
board_qemu = []