[package]
name = "vbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
spin = "0.9.2"
lazy_static = "1.4.0"
bit_field = "0.10.1"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
tinybmp = "0.3.1"
log = "0.4.14"
virtio-input-decoder = "0.1.4"
oorandom = "11.1.3"